# Smart-watch

./: .gitignore  README.md
PCB_Files/: #auto_saved_files#  _autosave-watch.kicad_pcb  _autosave-watch.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  watch.kicad_pcb  watch.kicad_prl  watch.kicad_pro  watch.kicad_sch  watch.kicad_sch-bak  ~watch.kicad_sch.lck
PCB_Files/footprints.pretty/: HRS_FH34SRJ-12S-0.5SH_50_.kicad_mod  HRS_FH34SRJ-14S-0.5SH_50_.kicad_mod  PQFN50P200X200X80-10N.kicad_mod  SOD-123_ONS.kicad_mod  SOP65P640X120-8N.kicad_mod  XCVR_NN03-320.kicad_mod
firmware/Barometer/: CMakeLists.txt
firmware/IMU/: CMakeLists.txt
firmware/IMU/main/: IMU.c  (+2 more)
firmware/Integration/: CMakeLists.txt
firmware/Integration/main/: CMakeLists.txt  main.c
firmware/Integration/main/include/: bmp388.h  i2c_manager.h  lsm6dso.h  max30102.h  max_m10s.h
firmware/Integration/main/src/: bmp388.c  i2c_manager.c  lsm6dso.c  max30102.c  max_m10s.c
firmware/PulseSensor/: CMakeLists.txt
firmware/bmp388/: CMakeLists.txt
firmware/lsm6dso_i2c/: CMakeLists.txt
firmware/lsm6dso_spi/: CMakeLists.txt
firmware/max30102/: CMakeLists.txt
firmware/max_m10s/: CMakeLists.txt
footprints_schematics/BQ24074RGTR/: BQ24074RGTR.kicad_sym  QFN50P300X300X100-17N.kicad_mod
footprints_schematics/DRV2605LDGSR/: DRV2605LDGSR.kicad_sym  SOP50P490X110-10N.kicad_mod
footprints_schematics/ESP32-PICO-D4/: ESP32-PICO-D4.kicad_sym  PQFN50P700X700X104-49N.kicad_mod
footprints_schematics/FH34SRJ-12S-0.5SH_50_/: FH34SRJ-12S-0.5SH_50_.kicad_sym  HRS_FH34SRJ-12S-0.5SH_50_.kicad_mod
(+36 files in other folders)
